--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb+srv://dohoangnam2912:<yosakoi0210>@cluster0.lnfxzqk.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://dohoangnam2912:Than123456@cluster0.aplqwdv.mongodb.net/?retryWrites=true&w=majority
